Updated build options to increase heap size and add trust store fix.